add code to make book form into a modal

--- a/index.html
+++ b/index.html
@@ -4,28 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>My Library</title>
 </head>
 <body>
     <div id="wrapper">
         <div id="header">
-            <img src="images/placeholder" alt="book icon" />
             <h1>My Library</h1>
         </div>
-        <div id="book-form-container">
-            <form id="book-form">
-                <label for="title-field">Title</label>
-                <input id="title-field" type="text" required>
-                <label for="author-field">Author</label>
-                <input type="text" id="author-field" required>
-                <label for="pages">Number of Pages</label>
-                <input type="text" id="pages">
-                <div>
-                    <label for="read">Read?</label>
-                    <input type="checkbox" id="read" required>
+        <div id="nav-menu">
+            <div id="logo">            <img src="images/placeholder" alt="book icon" />
                 </div>
-                <button type="submit" id="add-button">Add</button>
-            </form>
+            <div><button id="book-add">Add New Book</button></div>
         </div>
         <div id="card-container">
         </div>
