restructure page layout

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div id="wrapper">
         <div id="header">
+            <img src="images/book-logo.svg" height="200px" width="200px" alt="book icon" />
             <h1>My Library</h1>
         </div>
         <div id="nav-menu">
-            <div id="logo">            <img src="images/placeholder" alt="book icon" />
-                </div>
-            <div><button id="book-add">Add New Book</button></div>
+            <div>
+                <button id="book-add">Add New Book</button>
+            </div>
         </div>
         <div id="card-container">
         </div>
